// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage renders 1`] = `
.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #eceff2;
  background-attachment: scroll;
}

<div
  className="c0"
/>
`;

exports[`BackgroundImage renders with height 1`] = `
.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #eceff2;
  background-attachment: scroll;
  height: 320px;
}

<div
  className="c0"
  height="320px"
/>
`;

exports[`BackgroundImage renders with image 1`] = `
.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #eceff2;
  background-attachment: scroll;
  background-image: url(hello.png);
}

<div
  className="c0"
/>
`;

exports[`BackgroundImage variations parallax variation default render 1`] = `
.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #eceff2;
  background-attachment: fixed;
  background-image: url(hello.png);
}

<div
  className="c0"
/>
`;
